[package]
name = "nxthdr"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Command line interface for nxthdr platform"
repository = "https://github.com/nxthdr/nxthdr-cli"
homepage = "https://nxthdr.dev"
keywords = ["nxthdr", "peering", "probing", "cli"]
exclude = [
    ".github/*",
    "renovate.json",
]

[[bin]]
name = "nxthdr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = { version = "3.0", features = ["tracing"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
